<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/foto"
                android:layout_width="177dp"
                android:layout_height="187dp"
                card_view:srcCompat="@drawable/plato" />

            <LinearLayout
                android:layout_width="233dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:text="Titulo" />

                <TextView
                    android:id="@+id/precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Precio"
                    android:text="Precio" />

                <Button
                    android:id="@+id/agregar_plato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="agregarPlato"
                    android:text="@string/agregar_plato"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>